# DeepOnet-aeroelastic-frequency-domain

./: .gitignore  01_Preprocessing_Improved.ipynb  01_Preprocessing_Improved.py  02_Training_Improved.ipynb  02_Training_Improved.py  03_Scalar_Training.ipynb  03_Scalar_Training.py  250622_MH_Project_Preprocessing.ipynb  250623_C_train_fixed.ipynb  251123_walkthrough_after_critical_review.md  251123_walkthrough_after_review_round3.md  251123_walkthrough_after_review_round4.md  README.md  convert_preprocessing.py  convert_training.py  critical_review_report.md  critical_review_report_triangles_round2.md  critical_review_report_triangles_round3.md  implementation_walkthrough.md  pyproject.toml  test_viz.py  update_notebook.py  update_preprocessing.py  update_preprocessing_round2.py  update_preprocessing_round3.py  update_training.py  update_training_round2.py  update_training_round3.py  update_training_round4.py  update_training_visuals.py
